Refactor estilos menu

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,25 @@
 #root {
-    width: 90vw;
-    height: 90vh;
-    margin: auto;
+  width: 90vw;
+  height: 90vh;
+  margin: auto;
+  max-width: 600px;
+
+  /* Variables */
+  --brand-accent: rgba(160, 0, 190, 0.9);
+  --brand-accent-text: black;
+  --brand-primary: rgba(128, 0, 150, 0.9);
+  --brand-primary-light: rgba(160, 0, 190, 0.9);
+  --brand-primary-text: black;
+}
+
+#root * {
+  text-align: center;
+  font-size: large;
+  font-family: sans-serif;
+}
+
+#root form {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
